# bevy-games

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml
bevy-asteroids/: CLAUDE.md  Cargo.toml  index.html
bevy-asteroids/docs/: ARCHITECTURE_PRINCIPLES.md
bevy-asteroids/docs/iterations/: inertia-movement.md
bevy-asteroids/src/: app.rs  main.rs
bevy-asteroids/src/common/: mod.rs
bevy-asteroids/src/gameplay/: mod.rs
bevy-asteroids/src/input/: mod.rs
bevy-asteroids/src/rendering/: mod.rs
bevy-space-rts/: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html
bevy-space-rts/assets/: CREDITS.md
bevy-space-rts/scripts/: fetch_assets.sh
bevy-space-rts/src/: app.rs  main.rs
bevy-space-rts/src/assets/: mod.rs
bevy-space-rts/src/camera/: mod.rs
bevy-space-rts/src/common/: mod.rs
bevy-space-rts/src/rendering/: mod.rs
bevy-space-rts/src/selection/: mod.rs
bevy-space-rts/src/ui/: mod.rs
docs/: AI_AGENT_CHARTER.md  DEVELOPMENT_WORKFLOW.md  ITERATION_TEMPLATE.md  REPOSITORY_KICKOFF.md  REVIEW_CHECKLIST.md
docs/iterations/: asteroid-spawning.md  collision.md  projectiles.md
src/: app.rs
src/common/: mod.rs
src/gameplay/: mod.rs
src/input/: mod.rs
src/physics/: mod.rs
src/rendering/: mod.rs
web/: index.html
