[package]
name = "bevy-asteroids"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
rand = "0.10.0"

# Optimize dependencies in debug builds — keeps the game playable during dev
[profile.dev.package."*"]
opt-level = 3

# A small optimization for the game's own code in debug mode
[profile.dev]
opt-level = 1
